src/assets/main.css
.section {
    padding-top: 1rem;
    padding-bottom: 1rem;
}

th {
    white-space: nowrap;
}

code {
    color: #363636;
}

.is-family-monospace {
    font-size: 0.9em;
}

.notification {
    margin-top: 1rem;
}

.min-column {
    width: 0;
    white-space: nowrap;
}

.is-strikethrough {
    text-decoration: line-through;
}

.pre {
    white-space: pre;
}

.navbar > .container .navbar-menu {
    margin-right: 0;
}

.navbar > .container .navbar-brand {
    margin-left: 0;
}

.icon--focus {
    color: #4a4a4a !important;
}

.toggle {
    height: 0;
    width: 0;
    visibility: hidden;
    float: left;
}

.toggle + label {
    cursor: pointer;
    width: 55px;
    height: 28px;
    background: #bbb;
    display: block;
    border-radius: 28px;
    position: relative;
    transition: 0.3s;
}

fieldset[disabled] .toggle + label {
    cursor: not-allowed;
}

.toggle + label:after {
    content: '';
    position: absolute;
    top: 2px;
    left: 2px;
    width: 25px;
    height: 24px;
    background: #fff;
    border-radius: 25px;
    transition: 0.3s;
}

.toggle:checked + label {
    background: hsl(141, 53%, 31%);
}

.toggle:checked + label:after {
    left: calc(100% - 2px);
    transform: translateX(-100%);
}

.toggle + label:active:after {
    width: 32px;
}

fieldset[disabled] .toggle + label:active:after {
    width: 25px;
}

.dropdown-icon-search {
    display: flex;
}

.dropdown-icon-search .dropdown-trigger {
    flex-grow: 1;
}

.dropdown-icon-search .dropdown-item {
    padding-right: 1.5em;
}

.dropdown-icon-search .dropdown-menu {
    min-width: 19rem;
}

.dropdown-icon-search .dropdown-icon {
    font-size: 1rem;
}

.dropdown-icon-search .dropdown-content {
    padding-bottom: 0;
    padding-top: 0;
}

.dropdown-icon-search .dropdown-content a:focus {
    outline: 1px solid #485fc7;
    border-radius: 5px;
}

.button.is-ghost,
.button.is-ghost[disabled] {
    border: 0;
}

.button.is-ghost[disabled]:hover {
    text-decoration: none;
}

.button.is-ghost:focus:not(:active) {
    box-shadow: none;
}

.pager .button:hover {
    text-decoration: none;
}

